# bling-erp-api-python

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  README.pt-BR.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: authentication.md  errors.md  getting-started.md  index.md  pagination.md
docs/api-reference/: ad_categories.md  ads.md  borderos.md  caixas_bancos.md  client.md  contacts.md  contas_contabeis.md  contas_pagar.md  contas_receber.md  depositos.md  empresas.md  estoques.md  homologation.md  income_expense_categories.md  index.md  logisticas.md  logisticas_etiquetas.md  logisticas_objetos.md  logisticas_remessas.md  logisticas_servicos.md  naturezas_operacoes.md  nfce.md  nfe.md  nfse.md  notificacoes.md  ordens_producao.md  payment_methods.md  product_batch_entries.md  product_batches.md  product_categories.md  product_groups.md  product_stores.md  product_structures.md  product_suppliers.md  product_variations.md  products.md  propostas_comerciais.md  purchase_orders.md  sales_orders.md  situacoes.md  (+5 more)
docs/resources/: ad_categories.md  ads.md  borderos.md  caixas_bancos.md  contacts.md  contas_contabeis.md  contas_pagar.md  contas_receber.md  depositos.md  empresas.md  estoques.md  homologation.md  income_expense_categories.md  invoices.md  logisticas.md  logisticas_etiquetas.md  logisticas_objetos.md  logisticas_remessas.md  logisticas_servicos.md  naturezas_operacoes.md  nfce.md  nfse.md  notificacoes.md  ordens_producao.md  payment_methods.md  product_batch_entries.md  product_batches.md  product_categories.md  product_groups.md  product_stores.md  product_structures.md  product_suppliers.md  product_variations.md  products.md  propostas_comerciais.md  purchase_orders.md  sales_orders.md  situacoes.md  situacoes_modulos.md  situacoes_transicoes.md  (+3 more)
examples/: README.md  __init__.py  get_products.py  get_sales_orders.py
examples/.auth/: authenticate.py
examples/ads/: __init__.py  create_ad.py  get_ad.py  list_ads.py  pause_ad.py  publish_ad.py
examples/anuncios_categorias/: listar_categorias_anuncios.py  obter_categoria_anuncio.py
examples/borderos/: __init__.py  delete_bordero.py  get_bordero.py
examples/caixas_bancos/: __init__.py  create_cash_entry.py  get_cash_entry.py  list_cash_entries.py
examples/categorias loja/: get_store_category.py  list_store_categories.py
examples/contacts/: create_contact.py  delete_contact.py  delete_contacts.py  get_consumer_contact.py  get_contact.py  get_contact_types.py  list_contact_types.py  list_contacts.py  update_contact.py  update_contact_status.py  update_contacts_status.py
examples/contas_contabeis/: __init__.py  get_financial_account.py  list_financial_accounts.py
examples/contas_pagar/: __init__.py  get_payable.py  list_payables.py
examples/contas_receber/: __init__.py  get_receivable.py  list_receivables.py
examples/contatos/: __init__.py  create_contact.py  delete_contact.py  delete_contacts.py  get_consumer_contact.py  get_contact.py  get_contact_types.py  list_contact_types.py  list_contacts.py  update_contact.py  update_contact_status.py  update_contacts_status.py
examples/depositos/: __init__.py  get_deposit.py  list_deposits.py  manage_deposit.py
examples/empresas/: __init__.py  get_company_data.py
examples/estoques/: __init__.py  get_stock_balances.py  get_stock_balances_by_deposit.py
examples/formas_pagamentos/: listar_formas_pagamentos.py  obter_forma_pagamento.py
examples/homologacao/: __init__.py  create_product.py  get_product.py
examples/homologation/: create_product.py  get_product.py
examples/income_expense_categories/: create_income_expense_category.py  get_income_expense_category.py  list_income_expense_categories.py
examples/invoices/: nfce_example.py  nfe_example.py  nfse_example.py
examples/logisticas/: __init__.py  get_logistics.py  list_logistics.py
examples/logisticas_etiquetas/: __init__.py  get_labels.py
examples/logisticas_objetos/: __init__.py  get_object.py
examples/logisticas_remessas/: __init__.py  get_shipment.py
examples/logisticas_servicos/: __init__.py  list_services.py
examples/métodos_pagamento/: get_method.py  list_methods.py  payment_method.py
examples/naturezas_operacoes/: __init__.py  get_taxation.py  list_tax_natures.py  nature_of_operations.py
examples/notas_fiscais/: nfce_example.py  nfe_example.py  nfse_example.py
examples/notificacoes/: get_count.py  list_notifications.py  notificacoes.py
examples/ordens_producao/: generate_on_demand.py  get_order.py  list_orders.py  ordens_producao.py
examples/payment_methods/: __init__.py  get_method.py  list_methods.py
examples/pedidos_compra/: purchase_orders.py  purchase_orders_example.py
examples/pedidos_venda/: sales_orders.py
examples/product_categories/: get_product_category.py  list_product_categories.py
examples/product_groups/: get_group.py  list_groups.py
examples/products/: get_product_batch_entries.py  get_product_batches.py  get_product_stores.py  get_product_structures.py  get_product_suppliers.py  get_product_variations.py  get_products.py  post_product.py
examples/produtos/: __init__.py  get_product_batch_entries.py  get_product_suppliers.py  get_products.py  post_product.py  product.py  product_status.py  products.py  products_status.py
examples/produtos_categorias/: __init__.py  get_product_category.py  list_product_categories.py
examples/propostas_comerciais/: commercial_proposal.py  commercial_proposals.py  commercial_proposals_example.py
examples/receitas_e_despesas/: __init__.py  create_income_expense_category.py  get_income_expense_category.py  list_income_expense_categories.py
examples/sales_orders/: sales_orders_example.py
examples/situacoes/: modules.py  (+3 more)
scripts/: check_release.py  generate_models.py  generate_openapi_contracts.py  generate_resources.py  setup.py  validate_openapi.py
specs/: bling-openapi-reference.json
tests/: test_auth.py  test_authenticate.py  test_import.py
(+248 files in other folders)
