[project]
name = "bling-erp-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TempoNaoTenho", email = "bragaramonsantana@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
bling-erp-api = "bling_erp_api:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
