[project]
name = "bling-erp-api"
dynamic = ["version"]
description = "Python SDK for the Bling ERP API with auth, pagination, and helpers."
readme = "README.md"
license = "MIT"
authors = [
    { name = "tempont", email = "bragaramonsantana@gmail.com" }
]
keywords = ["bling", "erp", "api", "python", "sdk", "nfe", "nfce", "nfse", "nota-fiscal", "estoque", "produtos", "vendas", "contabilidade", "e-commerce"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "bling-jwt-auth>=0.4.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/tempont/bling-erp-api-python"
Documentation = "https://tempont.github.io/bling-erp-api-python/"
Repository = "https://github.com/tempont/bling-erp-api-python"
Issues = "https://github.com/tempont/bling-erp-api-python/issues"

[project.scripts]
bling-erp-api = "bling_erp_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bling_erp_api/_version.py"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.26.0",
]
codegen = [
    "datamodel-code-generator>=0.36.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.3",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.14",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.26.0",
]
codegen = [
    "datamodel-code-generator>=0.36.0",
]

# Lint, testing and formatting

################# Ruff #################
[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
exclude = [".git", ".ruff_cache", ".venv", "typings"]
show-fixes = true

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "YTT",
    "CPY",
    "FA",
    "TD",
    "C90",
    "PGH",
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "E501",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]
task-tags = ["TODO", "FIXME", "XXX", "HACK"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["T201", "ERA001", "D104", "ANN201"]
"scripts/**" = ["INP001"]
"src/bling_erp_api/contracts/generated/**" = ["RUF001"]
"src/bling_erp_api/models/generated/**" = ["TC001", "D101"]
"tests/**" = [
    "ANN001",
    "ANN201",
    "INP001",
    "PLR2004",
    "S101",
    "S105",
    "S106",
]
"tests/unit/test_resources.py" = ["TC001"]
"src/bling_erp_api/resources/contacts.py" = ["D102"]
"src/bling_erp_api/resources/naturezas_operacoes.py" = ["ANN401", "D417"]
"src/bling_erp_api/resources/notificacoes.py" = ["ANN401", "D417", "TC001"]
"src/bling_erp_api/resources/propostas_comerciais.py" = ["ANN401", "D417"]
"src/bling_erp_api/resources/situacoes.py" = ["ANN401", "D417"]
"src/bling_erp_api/resources/situacoes_transicoes.py" = ["ANN401", "D417"]
"src/bling_erp_api/resources/ordens_producao.py" = ["ANN401", "D417", "TC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

################# Test #################
[tool.pytest.ini_options]
testpaths = ["tests"]

################# basedpyright #################
[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
failOnWarnings = true
venvPath = "."
venv = ".venv"
extraPaths = ["src", "scripts"]
exclude = [
    "**/.venv",
    ".venv",
    "typings/**",
]
